--- a/festflow/server/.env
+++ b/festflow/server/.env
@@ -1,3 +1,2 @@
-MONGO_URI=mongodb+srv://Anshika:aashi13bhatia@cluster1.i3d2wpu.mongodb.net/festflow?retryWrites=true&w=majority&appName=Cluster1
-PORT=5000
-REACT_APP_API_URL=http://localhost:5000/api
+MONGO_URI=mongodb+srv://Aashi:Aashi13@cluster0.3xurgyp.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET=festflow2025jwtkey1013
